[package]
name = "pdftest"
version = "0.1.0"
authors = ["uriegel <uriegel@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
warp = "0.3"
tokio-util = "0.6"
dirs = "3.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
